--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 
 		<footer class="center">
-			<div class="">
+			<div>
 				<ul class="icons">
 					<li>
 						<a href="https://github.com/claudioscheer" target="_blank" class="button">
