remove fixed footer in children pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 
-<body class="p-b-80">
+<body>
     <div>
         <h1 class="name center">About</h1>
         <div class="description center">
@@ -34,7 +34,7 @@
 
     </div>
 
-    <footer class="center">
+    <footer class="center m-t-40">
         <div>
             <ul class="icons">
                 <li>
