--- a/pages/about.html
+++ b/pages/about.html
@@ -20,8 +20,7 @@
             <p>My name is Claudio Roberto Scheer Junior. I was born in Três de Maio - Rio Grande do Sul - Brazil, in 1997. Today
                 I am 19 years old.</p>
             <p>I graduated from the course in Computer Technician in 2015 and currently I am coursing 5th semester of Information
-                Systems at SETREM, where I worked for around two years as developer.</p>
-            <p>Today I'm working at Migrate as developer too.</p>
+                Systems at SETREM, where I work as developer too.</p>
             <p>The main purpose of this blog is to share some of the knowledge acquired in working life and also in academic
                 life.
             </p>
