--- a/pages/about.html
+++ b/pages/about.html
@@ -14,16 +14,13 @@
     <div>
         <h1 class="name center">About</h1>
         <div class="description center">
-            <span>Update at 17/03/2017</span>
+            <span>Update at 23/03/2017</span>
         </div>
         <div class="m-t-40 center post-content">
             <p>My name is Claudio Roberto Scheer Junior. I was born in Três de Maio - Rio Grande do Sul - Brazil, in 1997. Today
                 I am 19 years old.</p>
-            <p>I graduated from the course in Computer Technician in 2015 and currently I am coursing 5th semester of Information
+            <p>I graduated from the course Computer Technician in 2015 and currently I'm studying 5th semester of Information
                 Systems at SETREM, where I work as developer too.</p>
-            <p>The main purpose of this blog is to share some of the knowledge acquired in working life and also in academic
-                life.
-            </p>
             <p>Any questions please contact by email: <b>claudioscheer16@gmail.com</b> or through social networks.</p>
         </div>
 
