Changes in home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 			<span class="text-description"></span>
 		</div>
 		<div class="center m-t-40">
-			<a class="button button-blog" href="http://blog.claudioscheer.com.br" target="_blank">Blog</a>
+			<a class="button button-default" href="http://blog.claudioscheer.com.br" target="_blank">Blog</a>
+		</div>
+		<div class="center m-t-40">
+			<a class="button button-default" href="https://drive.google.com/file/d/0B-0jeORe6JpbZXVYR3ZCRFpMVFk/view" target="_blank">Curriculum Vitae</a>
 		</div>
 	</div>
 
@@ -41,20 +44,6 @@
 				</li>
 			</ul>
 		</div>
-
-		<div class="links">
-			<ul>
-				<li>
-					<a href="pages/about.html">About me</a>
-				</li>
-				<!--<li>
-					<span>·</span>
-				</li>
-				<li>
-					<a href="pages/more.html">More</a>
-				</li>-->
-			</ul>
-		</div>
 	</footer>
 
 	<script src="js/typed.js"></script>
@@ -62,7 +51,7 @@
 		document.addEventListener('DOMContentLoaded', function () {
 			Typed.new('.text-description', {
 				strings: ["I'm cool.", "I'm a programmer."],
-				typeSpeed: 30
+				typeSpeed: 30,
 			});
 		});
 	</script>
