--- a/index.html
+++ b/index.html
@@ -10,22 +10,16 @@
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body class="p-b-80">
-	<div>
-		<h1 class="name p-t-60 center">Claudio Scheer</h1>
-		<div class="description center">
-			<span class="text-description"></span>
+<body>
+	<div class="content">
+		<h1 class="name center">Claudio Scheer</h1>
+		<div class="center">
+			<span class="text-description">Developer</span>
 		</div>
-		<div class="center m-t-40">
-			<a class="button button-default" href="http://blog.claudioscheer.com.br" target="_blank">Blog</a>
-		</div>
-		<div class="center m-t-40">
+		<div class="center m-t-60">
 			<a class="button button-default" href="https://drive.google.com/file/d/0B-0jeORe6JpbZXVYR3ZCRFpMVFk/view" target="_blank">Curriculum Vitae</a>
 		</div>
-	</div>
-
-	<footer class="center fixed">
-		<div>
+		<div class="center m-t-60">
 			<ul class="icons">
 				<li>
 					<a href="https://github.com/claudioscheer" target="_blank" class="button">
@@ -44,17 +38,7 @@
 				</li>
 			</ul>
 		</div>
-	</footer>
-
-	<script src="js/typed.js"></script>
-	<script>
-		document.addEventListener('DOMContentLoaded', function () {
-			Typed.new('.text-description', {
-				strings: ["I'm cool.", "I'm a programmer."],
-				typeSpeed: 30,
-			});
-		});
-	</script>
+	</div>
 </body>
 
 </html>
