--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="content">
 		<h1 class="name center">Claudio Scheer</h1>
 		<div class="center">
-			<span class="text-description">Developer</span>
+			<span>Developer</span>
 		</div>
 		<div class="center m-t-60">
 			<a class="button button-default" href="https://drive.google.com/file/d/0B-0jeORe6JpbZXVYR3ZCRFpMVFk/view" target="_blank">Curriculum Vitae</a>
@@ -22,17 +22,17 @@
 		<div class="center m-t-60">
 			<ul class="icons">
 				<li>
-					<a href="https://github.com/claudioscheer" target="_blank" class="button">
+					<a href="https://github.com/claudioscheer" target="_blank">
 						<img class="icon" src="icons/github.svg" />
 					</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/claudioscheer" target="_blank" class="button">
+					<a href="https://twitter.com/claudioscheer" target="_blank">
 						<img class="icon" src="icons/twitter.svg" />
 					</a>
 				</li>
 				<li>
-					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank" class="button">
+					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank">
 						<img class="icon" src="icons/linkedin.svg" />
 					</a>
 				</li>
