--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="content">
 		<h1 class="name center">Claudio Scheer</h1>
 		<div class="center">
-			<span>Developer</span>
+			<span>Programmer</span>
 		</div>
 		<div class="center m-t-60">
 			<a class="button button-default" href="https://drive.google.com/file/d/0B-0jeORe6JpbZXVYR3ZCRFpMVFk/view" target="_blank">Curriculum Vitae</a>
