--- a/index.html
+++ b/index.html
@@ -22,17 +22,22 @@
 		<div class="center m-t-60">
 			<ul class="icons">
 				<li>
-					<a href="https://github.com/claudioscheer" target="_blank">
+					<a href="https://github.com/claudioscheer" target="_blank" title="GitHub">
 						<img class="icon" src="icons/github.svg" />
 					</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/claudioscheer" target="_blank">
+					<a href="https://gitlab.com/claudioscheer" target="_blank" title="Gitlab">
+						<img class="icon" src="icons/gitlab.svg" />
+					</a>
+				</li>
+				<li>
+					<a href="https://twitter.com/claudioscheer" target="_blank" title="Twitter">
 						<img class="icon" src="icons/twitter.svg" />
 					</a>
 				</li>
 				<li>
-					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank">
+					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank" title="Linkedin">
 						<img class="icon" src="icons/linkedin.svg" />
 					</a>
 				</li>
