--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://gitlab.com/claudioscheer" target="_blank" title="Gitlab">
+					<a href="https://gitlab.com/claudioscheer" target="_blank" title="GitLab">
 						<img class="icon" src="icons/gitlab.svg" />
 					</a>
 				</li>
