--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Claudio Scheer</title>
 	<link rel="stylesheet" href="css/style.css" />
+	
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-52570403-3"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments)};
+		gtag('js', new Date());
+
+		gtag('config', 'UA-52570403-3');
+	</script>
 </head>
 
 <body>
