--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Claudio Scheer</title>
 	<link rel="stylesheet" href="css/style.css" />
-	
+
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-52570403-3"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments)};
+		function gtag() { dataLayer.push(arguments) };
 		gtag('js', new Date());
 
 		gtag('config', 'UA-52570403-3');
@@ -40,10 +40,15 @@
 					<a href="https://gitlab.com/claudioscheer" target="_blank" title="GitLab">
 						<img class="icon" src="icons/gitlab.svg" />
 					</a>
-				</li> 
+				</li>
 				<li>
 					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank" title="Linkedin">
 						<img class="icon" src="icons/linkedin.svg" />
+					</a>
+				</li>
+				<li>
+					<a href="malito:claudioscheerjr@gmail.com" title="Mail">
+						<img class="icon" src="icons/mail.svg" />
 					</a>
 				</li>
 			</ul>
