Update curriculum vitae

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<span>Programmer</span>
 		</div>
 		<div class="center m-t-60">
-			<a class="button button-default" href="https://drive.google.com/file/d/0B-0jeORe6JpbZXVYR3ZCRFpMVFk/view" target="_blank">Curriculum Vitae</a>
+			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank">Curriculum Vitae</a>
 		</div>
 		<div class="center m-t-60">
 			<ul class="icons">
