--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 <body>
 	<div class="content">
 		<h1 class="name center">Claudio Scheer</h1>
-		<div class="center">
-			<span>Programmer</span>
-		</div>
 		<div class="center m-t-60">
 			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank">Curriculum Vitae</a>
 		</div>
@@ -39,6 +36,11 @@
 				<li>
 					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank" title="Linkedin">
 						<img class="icon" src="icons/linkedin.svg" />
+					</a>
+				</li>
+				<li>
+					<a href="https://medium.com/aprendendo-ia" target="_blank" title="Aprendendo IA - Medium">
+						<img class="icon" src="icons/medium.svg" />
 					</a>
 				</li>
 				<li>
