Medium url changed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://medium.com/aprendendo-ia" target="_blank" title="Aprendendo IA - Medium">
+					<a href="https://medium.com/@claudioscheer" target="_blank" title="Medium">
 						<img class="icon" src="icons/medium.svg" />
 					</a>
 				</li>
