--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <body>
 	<div class="content">
 		<h1 class="name center">Claudio Scheer</h1>
+		<div class="center">
+			<span>PGP Key ID: 50F7A2AA</span><br />
+			<a href="./claudio-public-pgp.asc" target="_blank" title="Public PGP Key">
+				<span>ClaudioScheer.asc</span>
+			</a>
+		</div>
 		<div class="center m-t-60">
 			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank">Curriculum Vitae</a>
 		</div>
