Change PGP key name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<h1 class="name center">Claudio Scheer</h1>
 		<div class="center">
 			<span>PGP Key ID: 50F7A2AA</span><br />
-			<a href="./claudio-public-pgp.asc" target="_blank" title="Public PGP Key">
+			<a href="./ClaudioScheer.asc" target="_blank" title="Public PGP Key">
 				<span>ClaudioScheer.asc</span>
 			</a>
 		</div>
