Change PGP key layout

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	<div class="content">
 		<h1 class="name center">Claudio Scheer</h1>
 		<div class="center">
-			<span>PGP Key ID: 50F7A2AA</span><br />
+			<span>PGP Key ID: </span>
 			<a href="./ClaudioScheer.asc" target="_blank" title="Public PGP Key">
-				<span>ClaudioScheer.asc</span>
+				<span>50F7A2AA</span>
 			</a>
 		</div>
 		<div class="center m-t-60">
