Add Flickr profile

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 					</a>
 				</li>
 				<li>
+					<a href="https://www.flickr.com/photos/156479922@N06" target="_blank" title="Flickr">
+						<img class="icon" src="icons/flickr.svg" />
+					</a>
+				</li>
+				<li>
 					<a href="malito:claudioscheerjr@gmail.com" title="Mail">
 						<img class="icon" src="icons/mail.svg" />
 					</a>
