--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="malito:claudioscheerjr@gmail.com" title="Mail">
+					<a href="malito:claudioscheer@protonmail.com" title="Mail">
 						<img class="icon" src="icons/mail.svg" />
 					</a>
 				</li>
