--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
 			</a>
 		</div>
 		<div class="center m-t-60">
-			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank">
-				Curriculum Vitae
+			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank"
+				style="margin-bottom: 8px">
+				Curriculum Vitae Lattes
+			</a>
+			<br />
+			<a href="https://raw.githubusercontent.com/claudioscheer/curriculum-vitae/master/curriculum-vitae.pdf"
+				target="_blank" title="PDF Curriculum Vitae English English">
+				<span>Curriculum Vitae English</span>
 			</a>
 		</div>
 		<div class="center m-t-60">
