--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="malito:claudioscheer@protonmail.com" title="Mail">
+					<a href="mailto:claudioscheer@protonmail.com" title="Mail">
 						<img class="icon" src="icons/mail.svg" />
 					</a>
 				</li>
