Changed 'Mail' to 'Email'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="mailto:claudioscheer@protonmail.com" title="Mail">
+					<a href="mailto:claudioscheer@protonmail.com" title="Email">
 						<img class="icon" src="icons/mail.svg" />
 					</a>
 				</li>
