--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="center m-t-60">
 			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank"
 				style="margin-bottom: 8px">
-				Curriculum Vitae Lattes
+				Curriculum Lattes
 			</a>
 			<br />
 			<a href="https://raw.githubusercontent.com/claudioscheer/curriculum-vitae/master/curriculum-vitae.pdf"
