English Curriculum Vitae link updated

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				Curriculum Lattes
 			</a>
 			<br />
-			<a href="https://raw.githubusercontent.com/claudioscheer/curriculum-vitae/master/curriculum-vitae.pdf"
-				target="_blank" title="PDF Curriculum Vitae English English">
-				<span class="curriculum-english">Curriculum Vitae English</span>
+			<a href="https://raw.githubusercontent.com/claudioscheer/resume/master/resume.pdf" target="_blank"
+				title="PDF Curriculum Vitae English English">
+				<span class="curriculum-english">English Curriculum Vitae</span>
 			</a>
 		</div>
 		<div class="center m-t-60">
