Add link to Sourcerer

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 						<img class="icon" src="icons/github.svg" />
 					</a>
 				</li>
+                <li>
+					<a href="https://sourcerer.io/claudioscheer" target="_blank" title="Sourcerer">
+						<img class="icon" src="icons/sourcerer.svg" />
+					</a>
+				</li>
 				<li>
 					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank" title="Linkedin">
 						<img class="icon" src="icons/linkedin.svg" />
