--- a/index.html
+++ b/index.html
@@ -1,66 +1,93 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Claudio Scheer site." />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Claudio Scheer</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="description" content="Claudio Scheer site." />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Claudio Scheer</title>
-	<link rel="stylesheet" href="css/style.css" />
-</head>
-
-<body>
-	<div class="content">
-		<h1 class="name center">Claudio Scheer</h1>
-		<div class="center">
-			<span>PGP Key ID: </span>
-			<a href="https://pgp.mit.edu/pks/lookup?op=get&search=0x0674667950F7A2AA" target="_blank"
-				title="Public PGP Key">
-				<span>50F7A2AA</span>
-			</a>
-		</div>
-		<div class="center m-t-60">
-			<a class="button button-default" href="http://lattes.cnpq.br/4443703147403114" target="_blank"
-				style="margin-bottom: 8px">
-				Curriculum Lattes
-			</a>
-			<br />
-			<a href="https://raw.githubusercontent.com/claudioscheer/resume/master/resume.pdf" target="_blank"
-				title="PDF Curriculum Vitae English English">
-				<span class="curriculum-english">English Curriculum Vitae</span>
-			</a>
-		</div>
-		<div class="center m-t-60">
-			<ul class="icons">
-				<li>
-					<a href="https://github.com/claudioscheer" target="_blank" title="GitHub">
-						<img class="icon" src="icons/github.svg" />
-					</a>
-				</li>
-                <li>
-					<a href="https://sourcerer.io/claudioscheer" target="_blank" title="Sourcerer">
-						<img class="icon" src="icons/sourcerer.svg" />
-					</a>
-				</li>
-				<li>
-					<a href="https://br.linkedin.com/in/claudioscheer" target="_blank" title="Linkedin">
-						<img class="icon" src="icons/linkedin.svg" />
-					</a>
-				</li>
-				<li>
-					<a href="mailto:claudioscheer@protonmail.com" title="Email">
-						<img class="icon" src="icons/mail.svg" />
-					</a>
-				</li>
-				<li>
-					<a href="https://www.flickr.com/photos/156479922@N06" target="_blank" title="Flickr">
-						<img class="icon" src="icons/flickr.svg" />
-					</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-</body>
-
+  <body>
+    <div class="content">
+      <h1 class="name center">Claudio Scheer</h1>
+      <div class="center">
+        <span>PGP Key ID: </span>
+        <a
+          href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0x0674667950F7A2AA"
+          target="_blank"
+          title="Public PGP Key"
+        >
+          <span>50F7A2AA</span>
+        </a>
+      </div>
+      <div class="center m-t-60">
+        <a
+          class="button button-default"
+          href="http://lattes.cnpq.br/4443703147403114"
+          target="_blank"
+          style="margin-bottom: 8px"
+        >
+          Curriculum Lattes
+        </a>
+        <br />
+        <a
+          href="https://raw.githubusercontent.com/claudioscheer/resume/master/resume.pdf"
+          target="_blank"
+          title="PDF Curriculum Vitae English English"
+        >
+          <span class="curriculum-english">English Curriculum Vitae</span>
+        </a>
+      </div>
+      <div class="center m-t-60">
+        <ul class="icons">
+          <li>
+            <a
+              href="https://github.com/claudioscheer"
+              target="_blank"
+              title="GitHub"
+            >
+              <img class="icon" src="icons/github.svg" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://sourcerer.io/claudioscheer"
+              target="_blank"
+              title="Sourcerer"
+            >
+              <img class="icon" src="icons/sourcerer.svg" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://br.linkedin.com/in/claudioscheer"
+              target="_blank"
+              title="Linkedin"
+            >
+              <img class="icon" src="icons/linkedin.svg" />
+            </a>
+          </li>
+          <li>
+            <a href="mailto:claudioscheer@protonmail.com" title="Email">
+              <img class="icon" src="icons/mail.svg" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.flickr.com/photos/156479922@N06"
+              target="_blank"
+              title="Flickr"
+            >
+              <img class="icon" src="icons/flickr.svg" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
