Add link to ResearchGate

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
           </li>
           <li>
             <a
+              href="https://www.researchgate.net/profile/Claudio-Scheer"
+              target="_blank"
+              title="ResearchGate"
+            >
+              <img class="icon" src="icons/researchgate.svg" />
+            </a>
+          </li>
+          <li>
+            <a
               href="https://sourcerer.io/claudioscheer"
               target="_blank"
               title="Sourcerer"
