Add link to A1 Lab

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
             </a>
           </li>
           <li>
+            <a href="https://lab-a1.github.io" target="_blank" title="A1 Lab">
+              <img
+                style="max-width: 32px"
+                class="icon"
+                src="icons/a1-lab.svg"
+              />
+            </a>
+          </li>
+          <li>
             <a
               href="https://www.researchgate.net/profile/Claudio-Scheer"
               target="_blank"
