--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li>
-            <a href="https://lab-a1.github.io" target="_blank" title="A1 Lab">
+            <a href="https://github.com/lab-a1" target="_blank" title="A1 Lab">
               <img
                 style="max-width: 32px"
                 class="icon"
