--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </li>
           <li>
             <a href="mailto:claudioscheer@protonmail.com" title="Email">
-              <img class="icon" src="icons/mail.svg" />
+              <img style="max-width: 24px" class="icon" src="icons/mail.svg" />
             </a>
           </li>
           <li>
