--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       <div class="center m-t-60">
         <a
           class="button button-default"
-          href="http://lattes.cnpq.br/4443703147403114"
+          href="https://raw.githubusercontent.com/claudioscheer/resume/master/resume.pdf"
           target="_blank"
           style="margin-bottom: 8px"
         >
-          Curriculum Lattes
+          English Resume
         </a>
         <br />
         <a
-          href="https://raw.githubusercontent.com/claudioscheer/resume/master/resume.pdf"
+          href="http://lattes.cnpq.br/4443703147403114"
           target="_blank"
           title="PDF Curriculum Vitae English English"
         >
-          <span class="curriculum-english">English Curriculum Vitae</span>
+          <span class="curriculum-english">Lattes Resume</span>
         </a>
       </div>
       <div class="center m-t-120">
@@ -74,16 +74,7 @@
           </li>
           <li>
             <a
-              href="https://sourcerer.io/claudioscheer"
-              target="_blank"
-              title="Sourcerer"
-            >
-              <img class="icon" src="icons/sourcerer.svg" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://br.linkedin.com/in/claudioscheer"
+              href="https://linkedin.com/in/claudioscheer"
               target="_blank"
               title="Linkedin"
             >
