--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,28 @@
 <!-- implement something like https://codepen.io/GeorgePark/pen/VXrwOP -->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Claudio Scheer photography gallery" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Photography - Claudio Scheer</title>
+    <link rel="stylesheet" href="css/gallery.css" />
+    <script src="js/gallery.js" async></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="gallery" id="gallery">
+            <div class="gallery-item" tabindex="0">
+                <img src="https://images.unsplash.com/photo-1511765224389-37f0e77cf0eb?w=500&h=500&fit=crop"
+                    class="gallery-image" />
+            </div>
+
+        </div>
+    </div>
+</body>
+
+</html>
