feat: add images from flickr

--- a/index.html
+++ b/index.html
@@ -34,14 +34,6 @@
         >
           English Resume
         </a>
-        <br />
-        <a
-          href="http://lattes.cnpq.br/4443703147403114"
-          target="_blank"
-          title="PDF Curriculum Vitae English English"
-        >
-          <span class="curriculum-english">Lattes Resume</span>
-        </a>
       </div>
       <div class="center m-t-120">
         <ul class="icons">
@@ -77,16 +69,12 @@
               <img style="max-width: 24px" class="icon" src="icons/mail.svg" />
             </a>
           </li>
-          <li>
-            <a
-              href="https://www.flickr.com/photos/156479922@N06"
-              target="_blank"
-              title="Flickr"
-            >
-              <img class="icon" src="icons/flickr.svg" />
-            </a>
-          </li>
         </ul>
+      </div>
+      <div class="center nav-links">
+        <a href="gallery.html" class="gallery-link" target="_blank"
+          >Photography</a
+        >
       </div>
     </div>
   </body>
