--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
         </ul>
       </div>
       <div class="center nav-links">
-        <a href="gallery.html" class="gallery-link" target="_blank"
-          >Photography</a
-        >
+        <!-- <a href="/blog" target="_blank">Blog</a> -->
+        <a href="/gallery" target="_blank">Photography</a>
       </div>
     </div>
   </body>
