--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,14 +8,49 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="favicon/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="favicon/android-chrome-512x512.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link rel="icon" type="image/png" href="favicon/favicon.ico" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+
     <title>Photography - Claudio Scheer</title>
-    <link rel="stylesheet" href="css/gallery.css" />
+
     <script src="js/gallery.js" async></script>
   </head>
 
-  <body>
-    <div class="container">
-      <div class="gallery" id="gallery"></div>
+  <body class="font-sans m-0 pt-8 pb-8">
+    <div class="container mx-auto px-5">
+      <div
+        class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3"
+        id="gallery"
+      ></div>
     </div>
   </body>
 </html>
