--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,32 +9,32 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="favicon/android-chrome-192x192.png"
+      href="/favicon/android-chrome-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="favicon/android-chrome-512x512.png"
+      href="/favicon/android-chrome-512x512.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="favicon/favicon-16x16.png"
+      href="/favicon/favicon-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon/favicon-32x32.png"
+      href="/favicon/favicon-32x32.png"
     />
-    <link rel="icon" type="image/png" href="favicon/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
       rel="stylesheet"
@@ -42,7 +42,7 @@
 
     <title>Photography - Claudio Scheer</title>
 
-    <script src="js/gallery.js" async></script>
+    <script src="/js/gallery.js" async></script>
   </head>
 
   <body class="font-sans m-0 pt-8 pb-8">
