feat: add resume and fix gallery

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
           >
             <div class="text-sm lg:flex-grow">
               <div class="nav-links flex justify-center">
+                <a
+                  href="/assets/resume.pdf"
+                  target="_blank"
+                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 hover:underline"
+                >
+                  Resume PDF
+                </a>
                 <!-- <a -->
                 <!--   href="/blog" -->
                 <!--   target="_blank" -->
