--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 >
                   Resume PDF
                 </a>
-                <!-- <a -->
-                <!--   href="/blog" -->
-                <!--   target="_blank" -->
-                <!--   class="block mt-4 lg:inline-block lg:mt-0 mr-4 hover:underline" -->
-                <!-- > -->
-                <!--   Tech Blog -->
-                <!-- </a> -->
+                <a
+                  href="/blog"
+                  target="_blank"
+                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 hover:underline"
+                >
+                  Tech Blog
+                </a>
                 <a
                   href="/gallery"
                   target="_blank"
@@ -88,7 +88,7 @@
             <span class="mr-2">PGP Key ID: </span>
             <a
               class="text-blue-500 hover:underline"
-              href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0x0674667950F7A2AA"
+              href="/assets/pgp-key.txt"
               target="_blank"
               title="Public PGP Key"
             >
