--- a/gallery/index.html
+++ b/gallery/index.html
@@ -45,7 +45,7 @@
     <script src="/js/gallery.js" async></script>
   </head>
 
-  <body class="font-sans m-0 pt-8 pb-8">
+  <body class="m-0 pt-8 pb-8">
     <div class="container mx-auto px-5">
       <div
         class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3"
