--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
                 <a
                   href="/assets/resume.pdf"
                   target="_blank"
-                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 hover:underline"
+                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 transition-all duration-200 ease-in-out h-auto hover:scale-110 transform"
                 >
                   Resume PDF
                 </a>
                 <a
                   href="/blog"
                   target="_blank"
-                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 hover:underline"
+                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 transition-all duration-200 ease-in-out h-auto hover:scale-110 transform"
                 >
                   Tech Blog
                 </a>
                 <a
                   href="/gallery"
                   target="_blank"
-                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 hover:underline"
+                  class="block mt-4 lg:inline-block lg:mt-0 mr-4 transition-all duration-200 ease-in-out h-auto hover:scale-110 transform"
                 >
                   Photography
                 </a>
