fix: a1 lab url

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/lab-a1" target="_blank" title="A1 Lab">
+            <a href="https://github.com/thea1lab" target="_blank" title="A1 Lab">
               <img
                 class="icon transition-all duration-200 ease-in-out w-8 h-auto hover:scale-150 transform"
                 src="icons/a1-lab.svg"
